# DynamicProcessManagement

./: CMakeLists.txt  README.md  main.h  master.cpp  slave.cpp
